--- a/style.css
+++ b/style.css
@@ -70,9 +70,10 @@ nav{
 .hom-sec{
     display: flex;
     overflow: hidden;
-    flex-direction: row-reverse ;
+    flex-direction: row ;
     background-color: #00132B;
     height: 50vw;
+    padding: 0vw 8vw;
 }
 
 .home{
@@ -80,7 +81,7 @@ nav{
     justify-content: right;
     text-align: left;
     place-items: right;
-    padding: 5vw;
+    padding: 5vw 1vw;
     height: 20vw;
     /* background-image: url('./circuit.png'); */
     background-size: 50vw ;
@@ -92,18 +93,21 @@ svg{
     z-index: 1;
     width: 50%;
     padding: 2vw;
-    rotate: 90deg;
+    /* rotate: 90deg; */
 }
 
 .home h2{
     background: none;
-    font-size: 3.8vw;  
+    font-size: 2.8vw;  
+    font-weight: 800;
+    margin: 8vw 0vw;
+    margin-bottom: 3vw;
 }
 
 .home p{
     background: none;
-    font-size: 2.5vw;
-    margin: 2vw 2vw; 
+    font-size: 2vw;
+    margin: 2vw 0vw; 
     color: white;
 }
 
@@ -111,6 +115,8 @@ svg{
     margin: 1svw;
     background: none;
     text-align: right;
+    display: flex;
+    justify-content: center;
 }
 
 .btn h3{
@@ -137,6 +143,7 @@ svg{
     color: #00132B;
     text-align: center;
     font-size: 2.5vw;
+    font-weight: 900;
 }
 
 .about h3{
@@ -158,6 +165,7 @@ h3 a{
     color: rgb(52, 51, 51);
     text-align: center;
     font-size: 1.3vw;
+    padding: 0vw 7vw;
 }
 
 .count-mission-vission{
@@ -411,6 +419,78 @@ footer img {
 }
 
 
+/* button */
+
+.button-17 {
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #3c4043;
+    cursor: pointer;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans",Roboto,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: .25px;
+    line-height: normal;
+    max-width: 100%;
+    overflow: visible;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform,opacity;
+    z-index: 0;
+  }
+  
+  .button-17:hover {
+    background: #F6F9FE;
+    color: #174ea6;
+  }
+  
+  .button-17:active {
+    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+    outline: none;
+  }
+  
+  .button-17:focus {
+    outline: none;
+    border: 2px solid #4285f4;
+  }
+  
+  .button-17:not(:disabled) {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+  }
+  
+  .button-17:not(:disabled):hover {
+    box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+  }
+  
+  .button-17:not(:disabled):focus {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+  }
+  
+  .button-17:not(:disabled):active {
+    box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+  }
+  
+  .button-17:disabled {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+  }
+
+
 @media screen and (max-width: 650px) {
 
     .mob-nav{
@@ -459,7 +539,7 @@ footer img {
         margin: 2vw 0vw;
         display: grid;
         grid-template-columns: 1fr;
-        gap: 1vw;
+        gap: 4vw;
         text-align: center;
     }
 
@@ -496,45 +576,53 @@ footer img {
         background-color: #00132B; */
         text-align: center;
         display: contents;
-        height: 60vw;
+        height: 90vw;
     }
 
     .home{
         text-align: center;
         align-items: center;
-        height: 50vw;
-        padding: 10vw 0vw;   
+        height: 150vw;
+        padding: 25vw 0vw;   
     }
 
     .home h2{
-        font-size: 6vw;
+        font-size: 11vw;
+        margin: 8vw 0vw;
     }
 
     .home p{
-        font-size: 4.5vw;
-        padding: 2vw 8vw;
+        font-size: 6vw;
+        padding: 15vw 8vw;
     }
 
     .btn{
         display: flex;
         justify-content: center;
         align-items: center;
+
     }
 
     .about h1{
-        font-size: 4vw;
+        font-size: 6vw;
     }
 
     .about h3 {
-        font-size: 2.5vw;
+        font-size: 4vw;
         margin: 2vw;
     }
 
     .about p{
-        font-size: 3vw;
+        font-size: 4vw;
     }
 
 }
+
+
+@media screen and (max-width: 50px) {
+
+
+
 
 /* 
   
