--- a/style.css
+++ b/style.css
@@ -204,7 +204,6 @@ h3 a{
     border-style: dashed;
     justify-content: center;
     place-items: center;
-    color: #00132B;
 }
 
 .count-num h4{
@@ -229,6 +228,11 @@ h3 a{
 .mission-vision p{
     text-align: left;
     padding: 1vw;
+}
+
+.events{
+    background-color: #f7fafc;
+    padding: 2vw 0vw;
 }
 
 .events p{
@@ -322,6 +326,7 @@ swiper-slide {
     grid-template-rows: 1fr 1fr 1fr;
     padding: 0vw 12vw;
     margin: 3vw 0vw;
+    gap: 2vw;
 }
 
 .blogs img{
@@ -344,11 +349,11 @@ swiper-slide {
 
 .blog p{
     color: black;
-    margin: 4vw;
+    margin: 1vw 0vw;
+    margin-right: 5vw;
     font-size: 1.5vw;
-    
+    padding-bottom: 0vw;
 }
-
 
 .text-center p{
     justify-content: center;
@@ -533,7 +538,7 @@ footer img {
         display: flex;
         justify-content: center;
         flex-direction: column;
-        display: none;
+        display: contents;
     }
 
     .mob-nav a{
@@ -542,6 +547,7 @@ footer img {
         text-decoration: none;
         margin: 1vw 0vw;
         font-size: 3vw;
+        display: contents;
     }
 
 
@@ -596,6 +602,7 @@ footer img {
         color: #00132B;
         text-align: center;
         place-items: center;
+        padding: 0vw 25vw;
     }
 
     p{
@@ -652,19 +659,31 @@ footer img {
     }
 
     .blogs{
-        gap: 1rem;
+        gap: 2vw;
         margin: 5vw;
+        margin-bottom: 5vw;
     }
-
-    .blog{
+    .blog {
         display: flex;
         flex-direction: column;
-        text-align: center ;
-    }
-
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 5vw;
+      }
+      
+      .blog-des {
+        padding: 16px;
+      }
+      
+      .blog img {
+        width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+      }
+/* 
     .blog img{
         width: 30vw;
-    }
+    } */
 
     .blog h1{
         font-size: 3.5vw;
@@ -678,7 +697,6 @@ footer img {
     
 
 }
-
 
 
 
@@ -735,4 +753,4 @@ footer img {
   }
   
   
-    */ 
+   */ 
